version 2.1
- modified hierarchical color strategy
- recover interactive function tmClick
- add version number of required data.table package to prevent conflicts

version 2.0.1
- computation time examples shorter (CRAN policy)

version 2.0
- main function migrated to treemap
- treemap types revised: two new types added: "color", by which users are able to provide custom colors to each rectangle, and "index" (which different from the "index" in prior versions which is now renamed to "depth"). The new "index" type hierarchically assigns a color for each category in the index-tree (defined by the index variables). Treemap type "linked" removed, since it is obsolete by "categorical" type in combination of argument vp (see below).
- color palette "HCL" added, which picks colors from the HCL color space. Applicable for "index", "depth" and "categorical". Additional arguments added to fully control color picking method.
- vp argument added, to place treemap inside a grid.viewport. Useful for custom made visualizations or small multiples.
- small multiples not directly facilitated anymore, since it can easily be done with the vp argument.
- invisible treemap output redefined
- aggregation method (under the engine) re-implemented
- businness statistics example dataset replaced. The new dataset contains four hierarchical levels.
- bug in value-type color assignment fixed
- color palette mapping improved
- label overlapping improved: added overlap.labels argument
- fixed bug in color scaling number

version 1.1-2
- no dependencies anymore, only imports

version 1.1-1
- improved value treemap (better color range)
- added new example dataset: GNI2010
- fixed bug with character variables as index variables
- fixed bug with non-factor variables as categorical variable

version 1.1
- added categorical treemap type (each category has own color)
- added position.legend argument, which determines whether legend is placed: "bottom", "right", or "none"

version 1.0-4