@@ -9,9 +9,9 @@ function(dat, position.legend, palette, labels, palette.HCL.options) {
     #dt[, md:=apply(dt[, 1:depth, with=FALSE], MARGIN=1, FUN=function(x)sum(!is.na(x)))]
 
     dat$color <- if (palette[1]=="HCL") {
-        treepalette(dat[,1:depth,with=FALSE], method="HCL", palette.HCL.options=palette.HCL.options)
+        treepalette(dat[,1:depth,with=FALSE], method="HCL", palette.HCL.options=palette.HCL.options, prepare.dat=FALSE)
     } else {
-        treepalette(dat[,1:depth,with=FALSE], method="HSV", palette=palette)       
+        treepalette(dat[,1:depth,with=FALSE], method="HSV", palette=palette, prepare.dat=FALSE)       
     }
 
      
