@@ -1,0 +1,65 @@
+#' Return info about clicked rectangle
+#'
+#' Return information about the rectangle the user clicked on. Useful to identify small rectangles in large treemaps. 
+#' @param npcClick mouse click in npc coordinates, which can be generated by \code{\link{tmClick}}
+#' @param tmSave treemap information: value returned by \code{\link{treemap}}
+#' @import grid
+#' @export
+#' @examples data(business)
+#' \dontrun{
+#' tmSave <- treemap(business, 
+#' index=c("NACE1", "NACE2", "NACE3"), 
+#' vSize="turnover", 
+#' type="index")
+#' # capture mouseclick
+#' npcClick <- tmClick()
+#'
+#' # locate clicked object
+#' print(tmLocate(npcClick, tmSave))
+#'}
+tmLocate <-
+    function(npcClick, tmSave) {
+        tm <- tmSave$tm
+        
+        # convert click to inches
+        inchClick <- list()
+        inchClick$x <- convertX(unit(npcClick$x, "npc"), "inches")
+        inchClick$y <- convertY(unit(npcClick$y, "npc"), "inches")
+        
+        # zoom in to selected treemap
+        downViewport("data")
+        downViewport("data_asp")
+        
+        # determine treemap size in inches
+        sizeTm <- c(convertWidth(unit(1, "npc"), "inches", valueOnly=TRUE),
+                    convertHeight(unit(1, "npc"), "inches", valueOnly=TRUE))
+        
+        # get transformation matrix
+        trans <- current.transform()
+        
+        # go to root viewport
+        upViewport(n=2)
+        
+        # calculate click (inches) relative to selected treemap
+        tempCoor <- c(unlist(inchClick), 1) %*% solve(trans)
+        inchCoor <- (tempCoor/tempCoor[3])[-3]
+        
+        # transform to npc coordinates
+        npcCoor <- inchCoor / sizeTm
+        
+        cat("click: x y", npcCoor[1], npcCoor[2], "\n")
+        
+        # retrieve selected treemap
+        
+        # retrieve selected rectangle
+        rectInd <- which(tm$x0 < npcCoor[1] &
+                             (tm$x0 + tm$w) > npcCoor[1] &
+                             tm$y0 < npcCoor[2] &
+                             (tm$y0 + tm$h) > npcCoor[2])
+        
+        if (length(rectInd)==0) {
+            stop("no treemap selected")
+        }
+        
+        return(tm[rectInd[1], ])
+    }
