@@ -29,7 +29,7 @@
 #'        \item{\code{hue_start}:}{number between 0 and 360 that determines the starting hue value (default: 30)}
 #'        \item{\code{hue_end}:}{number between \code{hue_start} and \code{hue_start + 360} that determines the ending hue value (default: 390)}
 #'        \item{\code{hue_spread}:}{boolean that determines whether the colors are spread such that adjacent levels get more distinguishable colors. If \code{FALSE}, then the colors are equally distributed from \code{hue_start} to \code{hue_end} (default: TRUE)}
-#'        \item{\code{hue_fraction}:}{number between 0 and 1 that determines the fraction of the hue circle that is used for recursive color picking: if 0 then the full hue circle is used, which means that the hue of the colors of lower-level nodes are spread maximally. If 1, then the hue of the colors of lower-level nodes are identical of the hue of their parents. (default: .5)}
+#'        \item{\code{hue_fraction}:}{number between 0 and 1 that determines the fraction of the hue circle that is used for recursive color picking: if 1 then the full hue circle is used, which means that the hue of the colors of lower-level nodes are spread maximally. If 0, then the hue of the colors of lower-level nodes are identical of the hue of their parents. (default: .5)}
 #'        \item{\code{chroma}:}{chroma value of colors of the first-level nodes, that are determined by the first index variable (default: 60)}
 #'        \item{\code{luminance}:}{luminance value of colors of the first-level nodes, i.e. determined by the first index variable (default: 70)}
 #'        \item{\code{chroma_slope}:}{slope value for chroma of the non-first-level nodes. The chroma values for the second-level nodes are \code{chroma+chroma_slope}, for the third-level nodes \code{chroma+2*chroma_slope}, etc. (default: 5)}
@@ -413,7 +413,7 @@ treemap <-
         tm <- datlist[, c(indexList, "s", "l", "x0", "y0", "w", "h"), with=FALSE]
         setnames(tm, c(index, "size", "level", "x0", "y0", "w", "h"))
         
-        tmSave <- list(tm = as.data.table(tm),
+        tmSave <- list(tm = as.data.frame(tm),
                        type = type,
                        vSize = vSize,
                        vColor = ifelse(vColor=="vColor.temp", NA, vColor),
